# binarygrep

./: Cargo.toml  README.txt
src/: bgreperror.rs  bmsearch.rs  buffer.rs  extendedsearch.rs  lib.rs  main.rs  search.rs  search2.rs  simplesearch.rs
tests/: integration_tests.rs  integretion_tests.rs  testdata_783
tests/subdir/: testdata_1200
